--- a/market/core/templates/core/base.html
+++ b/market/core/templates/core/base.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>{% block title %} {% endblock %} | Market</title>
+    <title>{% block title %} {% endblock %} | MahdiStore</title>
   </head>
   <body>
     <nav class="py-6 px-6 flex justify-between items-center border-b border-gray-200">
-            <a href="/" class="text-xl font-semibold">Market</a>
+            <a href="/" class="text-xl font-semibold">MahdiStore</a>
       <div class="space-x-6">
         <a href="{% url 'item:new' %}" class="text-lg font-semibold hover:text-gray-500">New item</a>
         <a href="{% url 'item:items' %}" class="text-lg font-semibold hover:text-gray-500 ">Browse</a>
@@ -29,7 +29,7 @@
       <div class="w-2/3 pr-10">
           <h3 class="mb-5 font-semibold text-gray-400">About</h3>
 
-          <p class="text-lg text-gray-500">Lorem ipsum bla bla bla. Lorem ipsum bla bla bla. Lorem ipsum bla bla bla.</p>
+          <p class="text-lg text-gray-500">MahdiStore – Quality products, great prices, delivered to your door with ease.</p>
       </div>
 
       <div class="w-1/3">
